a whole load of cleanup and fixes