@@ -5,7 +5,6 @@ import me.desht.modularrouters.item.module.TargetedModule;
 import me.desht.modularrouters.logic.ModuleTarget;
 import net.minecraft.world.item.ItemStack;
 
-import java.util.Collections;
 import java.util.List;
 
 public class CompiledSenderModule2 extends CompiledSenderModule1 {
@@ -15,7 +14,8 @@ public class CompiledSenderModule2 extends CompiledSenderModule1 {
 
     @Override
     protected List<ModuleTarget> setupTargets(ModularRouterBlockEntity router, ItemStack stack) {
-        return Collections.singletonList(TargetedModule.getTarget(stack, !router.nonNullLevel().isClientSide));
+        ModuleTarget target = TargetedModule.getTarget(stack, !router.nonNullLevel().isClientSide);
+        return target == null ? List.of() : List.of(target);
     }
 
     @Override
